--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,43 +1,39 @@
-.flex-container1 {
-   display: flex;
-   border: 3px;
-   width: 15%;
-   height: 600px;
-   background-color: #0c2340;
-   font-size: 20pt;
+.navbar {
+    width: 250px;
+    height: 100%;
+    background-color: #0c2340;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: column;
 }
 
-.outer-container {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   width: 100%;
-   height: 600px;
+.machine-list-outlet {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 
-.flex-container2 {
-   display: flex;
-   width: 85%;
-   height: 600px;
+nav {
+    width: 100%;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.link {
-   color: white;
+.nav-link {
+    color: white;
 }
 
-.line {
-   width: 100%;
+hr {
+    border-left-width: 0;
+    border-right-width: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
-.star {
-   width: 30pt;
-   height: 30pt;
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 12pt;
-}
-
-.inner-flex-container {
-   align-items: center;
+.logo {
+    width: 30pt;
+    height: 30pt;
 }
